feat(edit-entry): edit entry front-end functionality
- User can now use frontend page to edit their entries
- Did some UI modifications

[Finishes #159805178]

--- a/dashboard.html
+++ b/dashboard.html
@@ -37,28 +37,34 @@
                 <li>
                     <div class="thumbnail">
                         <img src="./imgs/userface.png" alt="User thumbnail">
-                        <ul class="user-dropdown">
-                            <li>
-                                <a href="./profile.html">Profile</a>
-                            </li>
-                            <li class="mobile-show">
-                                <a href="./create.html">Add New Entry</a>
-                            </li>
-                            <li>
-                                <a href="./login.html">Log Out</a>
-                            </li>
-                        </ul>
+                        <div class="user-dropdown-wraper">
+                            <ul class="user-dropdown">
+                                <li>
+                                    <a href="./profile.html">Profile</a>
+                                </li>
+                                <li class="mobile-show">
+                                    <a href="./create.html">Add New Entry</a>
+                                </li>
+                                <li>
+                                    <a href="./login.html">Log Out</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
             </ul>
         </div>
     </header>
     <main role="main">
-        <div class="list-container">
-            <div class="filters">
-                <button class="">All</button>
-                <button class="active">Favourite</button>
+        <div class="filter-margin">
+            <div class="list-container">
+                <div class="filters">
+                    <button class="">All</button>
+                    <button class="active">Favourite</button>
+                </div>
             </div>
+        </div>
+        <div class="list-container">
             <div class="content">
                 <div class="place-text">
                     <p>
