--- a/editentry.html
+++ b/editentry.html
@@ -37,17 +37,19 @@
                 <li>
                     <div class="thumbnail">
                         <img src="./imgs/userface.png" alt="User thumbnail">
-                        <ul class="user-dropdown">
-                            <li>
-                                <a href="./profile.html">Profile</a>
-                            </li>
-                            <li class="mobile-show">
-                                <a href="./create.html">Add New Entry</a>
-                            </li>
-                            <li>
-                                <a href="./login.html">Log Out</a>
-                            </li>
-                        </ul>
+                        <div class="user-dropdown-wraper">
+                            <ul class="user-dropdown">
+                                <li>
+                                    <a href="./profile.html">Profile</a>
+                                </li>
+                                <li class="mobile-show">
+                                    <a href="./create.html">Add New Entry</a>
+                                </li>
+                                <li>
+                                    <a href="./login.html">Log Out</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -56,15 +58,15 @@
     <main role="main">
         <div class="container col-1">
             <div>
-                <h1 class="big-title">Add/Edit Entry</h1>
+                <h1 class="big-title">Edit Entry</h1>
             </div>
-            <form id="create" class="wrapper editprofile">
+            <form id="edit-entry" class="wrapper editprofile">
                 <div class="form-wrapper">
                     <div class="display-payload"></div>
                     <div class="form-group-wrap">
                         <div class="form-group">
                             <div class="title-box">
-                                <input autocomplete="off" class="form-control" type="text" name="title" placeholder="Enter title">
+                                <input autocomplete="off" class="form-control title" type="text" name="title" placeholder="Enter title">
                                 <label></label>
                             </div>
                         </div>
@@ -75,7 +77,7 @@
                     </div>
                     <div class="small-spacing"></div>
                     <div class="form-group about-cont">
-                        <textarea class="form-control" name="description" placeholder="Description"></textarea>
+                        <textarea class="form-control description" name="description" placeholder="Description"></textarea>
                         <label></label>
                     </div>
                 </div>
@@ -88,7 +90,7 @@
             </form>
         </div>
     </main>
-    <script src="./CLIENT/create.js"></script>
+    <script src="./CLIENT/edit-entry.js"></script>
 </body>
 
 </html>
