--- a/editprofile.html
+++ b/editprofile.html
@@ -37,17 +37,19 @@
                 <li>
                     <div class="thumbnail">
                         <img src="./imgs/userface.png" alt="User thumbnail">
-                        <ul class="user-dropdown">
-                            <li>
-                                <a href="./profile.html">Profile</a>
-                            </li>
-                            <li class="mobile-show">
-                                <a href="./create.html">Add New Entry</a>
-                            </li>
-                            <li>
-                                <a href="./login.html">Log Out</a>
-                            </li>
-                        </ul>
+                        <div class="user-dropdown-wraper">
+                            <ul class="user-dropdown">
+                                <li>
+                                    <a href="./profile.html">Profile</a>
+                                </li>
+                                <li class="mobile-show">
+                                    <a href="./create.html">Add New Entry</a>
+                                </li>
+                                <li>
+                                    <a href="./login.html">Log Out</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
             </ul>
