profile page: details added

--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
                                 <li class="mobile-show">
                                     <a href="./create.html">Add New Entry</a>
                                 </li>
-                                <li>
+                                <li id="logout">
                                     <a href="./login.html">Log Out</a>
                                 </li>
                             </ul>
