feat(profile-page): profile page front-end functionality
- Users can see and modify their details
- Did refactoring
- Did UI modification

[Finishes #159822640]

--- a/create.html
+++ b/create.html
@@ -36,7 +36,7 @@
                 <li class="mobile-hide user-fname"></li>
                 <li>
                     <div class="thumbnail">
-                        <img src="./imgs/userface.png" alt="User thumbnail">
+                        <img id="thumbnail" src="" alt="User thumbnail">
                         <div class="user-dropdown-wraper">
                             <ul class="user-dropdown">
                                 <li>
