--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
                 <li class="mobile-hide user-fname"></li>
                 <li>
                     <div class="thumbnail">
-                        <img src="./imgs/userface.png" alt="User thumbnail">
+                        <img id="thumbnail" src="" alt="User thumbnail">
                         <div class="user-dropdown-wraper">
                             <ul class="user-dropdown">
                                 <li>
@@ -59,8 +59,8 @@
         <div class="filter-margin">
             <div class="list-container">
                 <div class="filters">
-                    <button class="">All</button>
-                    <button class="active">Favourite</button>
+                    <button class="active">All</button>
+                    <button class="">Favourite</button>
                 </div>
             </div>
         </div>
