feat(reminder-notification): reminder notification front-end functionality
- Did code refactoring
- modify the UI

[Finishes #159890168]

--- a/dashboard.html
+++ b/dashboard.html
@@ -123,6 +123,11 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>© 2018
+            <em>PrinceGoziem</em>
+        </p>
+    </footer>
     <script src="./CLIENT/dashboard.js"></script>
     <!-- <script src="./js/custom.js"></script> -->
 </body>
