--- a/details.html
+++ b/details.html
@@ -107,6 +107,11 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>© 2018
+            <em>PrinceGoziem</em>
+        </p>
+    </footer>
     <script src="./CLIENT/details.js"></script>
 </body>
 
