--- a/editentry.html
+++ b/editentry.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="small-spacing"></div>
                     <div class="form-group about-cont">
-                        <textarea autocomplete="off" class="form-control description" name="description" placeholder="Description"></textarea>
+                        <textarea autocomplete="off" class="form-control description createdecs" name="description" placeholder="Description"></textarea>
                         <label></label>
                     </div>
                 </div>
@@ -90,6 +90,11 @@
             </form>
         </div>
     </main>
+    <footer>
+        <p>© 2018
+            <em>PrinceGoziem</em>
+        </p>
+    </footer>
     <script src="./CLIENT/edit-entry.js"></script>
 </body>
 
