--- a/profile.html
+++ b/profile.html
@@ -57,11 +57,6 @@
     </header>
     <main role="main">
         <div class="container col-1">
-            <!-- <div>
-                <a href="./editprofile.html">
-                    <button class="cta-btn">Edit profile</button>
-                </a>
-            </div> -->
             <div class="info">
                 <div class="user-image">
                     <div class="user-image-inner">
@@ -83,11 +78,6 @@
                                 <span class="dp-fname"></span>
                                 <span class="dp-lname"></span>
                             </h3>
-                            <!-- <button class="change-image-btn">
-                            <i class="fas fa-image"></i>change image</button>
-                        <p class="remove">
-                            <a href="#">Remove</a>
-                        </p> -->
                         </div>
                         <div class="total">
                             <h1 class="total-entries"></h1>
@@ -124,10 +114,6 @@
                             </button>
                         </div>
                     </div>
-                    <!-- <div class="age">
-                        <h4>Age:</h4>
-                        <p>30years</p>
-                    </div> -->
                 </div>
             </div>
             <div class="wrapper">
@@ -154,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-olay">
+        <div class="modal-olay model-add">
             <div class="modal-wraP">
                 <form id="category-form">
                     <div class="form-group">
@@ -195,7 +181,24 @@
             </div>
             <i class="modal-close fas fa-times"></i>
         </div>
+        <div class="modal-olay trash-modal">
+            <div class="modal-wrap">
+                <p class="trash-title">Are you sure you want to delete this category?</p>
+                <div class="trash-body">
+                    <p>Deleting this category will also delete any entry under this category and it cannot be undone!</p>
+                    <div class="trash-cta">
+                        <button class="accept">YES, DELETE IT</button>
+                        <button class="cancel">CANCEL</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <p>© 2018
+            <em>PrinceGoziem</em>
+        </p>
+    </footer>
     <script src="./CLIENT/profile.js"></script>
     <script src="./js/custom.js"></script>
 
